--- a/frontend/src/styles/scss/components/_mainContent.scss
+++ b/frontend/src/styles/scss/components/_mainContent.scss
@@ -1,7 +1,7 @@
 .mainContent {
 	display: flex;
 	flex-wrap: wrap;
-	height: 100%;
+	height: 100vh;
 	flex-direction: column;
 	background: $light-blue;
 	justify-content: space-around;
