--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -138,7 +138,7 @@ table {
   src: url("https://fonts.googleapis.com/css?family=Open+Sans:300, 300italic, 400, 400italic, 700"); }
 
 html {
-  font-family: 'defaultFont', sans-serif; }
+  font-family: 'defaultFont', Open Sans, sans-serif; }
 
 h1 {
   font-size: 3rem; }
@@ -163,7 +163,7 @@ img {
   0% {
     height: 0px; }
   100% {
-    height: 25rem; } }
+    height: 100%; } }
 
 @keyframes hideMenu {
   0% {
@@ -172,15 +172,15 @@ img {
     height: 0px; } }
 
 .app {
-  max-width: 1440px;
   margin: auto;
   position: relative; }
 
 .header {
   position: relative;
+  display: flex;
+  justify-content: center;
   top: 0;
   width: 100%;
-  max-height: 908px;
   height: 100vh;
   background: linear-gradient(0deg, rgba(21, 44, 68, 0.78), rgba(18, 37, 52, 0.16)), url("../../Assets/images/man-consulting.jpeg");
   background-size: cover;
@@ -197,7 +197,7 @@ img {
     flex-direction: column;
     align-items: center;
     background: rgba(21, 44, 68, 0.78);
-    width: 100%;
+    width: 92%;
     transition: padding 200ms linear;
     z-index: 999; }
     @media screen and (min-width: 999px) {
@@ -206,10 +206,9 @@ img {
         background: transparent;
         flex-direction: row;
         padding: 2.7rem 0rem 1.1rem;
-        margin: 0 6rem;
+        margin: auto;
         animation: none;
-        border-bottom: 1px solid #fff;
-        width: stretch; } }
+        border-bottom: 1px solid #fff; } }
     .header .nav .logoMenuIcon {
       display: flex;
       flex-direction: row;
@@ -219,7 +218,7 @@ img {
       padding: 0 3rem; }
       @media screen and (min-width: 999px) {
         .header .nav .logoMenuIcon {
-          width: 25%;
+          flex: 1;
           padding: 0; }
           .header .nav .logoMenuIcon .menuIcon {
             display: none; } }
@@ -247,8 +246,8 @@ img {
       align-items: center;
       justify-content: flex-end;
       text-align: center;
-      animation: showMenu 300ms forwards;
-      overflow: hidden; }
+      overflow: hidden;
+      animation: showMenu 300ms forwards; }
       @media screen and (min-width: 999px) {
         .header .nav .menu {
           flex-direction: row;
@@ -409,7 +408,7 @@ img {
 .mainContent {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
+  height: 100vh;
   flex-direction: column;
   background: #1793d420;
   justify-content: space-around;
