MainContent is responsive

--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -197,11 +197,12 @@ img {
     flex-direction: column;
     align-items: center;
     background: rgba(21, 44, 68, 0.78);
-    width: 92%;
+    width: 100%;
     transition: padding 200ms linear;
     z-index: 999; }
     @media screen and (min-width: 999px) {
       .header .nav {
+        width: 92%;
         position: absolute;
         background: transparent;
         flex-direction: row;
@@ -408,8 +409,8 @@ img {
 .mainContent {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
-  flex-direction: column;
+  min-height: 100vh;
+  flex-direction: row;
   background: #1793d420;
   justify-content: space-around;
   align-items: center;
@@ -418,18 +419,15 @@ img {
     position: relative;
     display: flex;
     width: 80%;
-    height: auto;
     padding: 1.6rem;
     margin: 2rem 1rem;
     background: #fff;
     flex-direction: column;
     align-items: center; }
     .mainContent .card .cardImage {
-      height: 13rem;
       overflow: hidden; }
     .mainContent .card .cardDesc {
-      padding: 1.8rem 1.3rem 0.7rem;
-      height: 59%; }
+      padding: 1rem 1.3rem 0.7rem; }
       .mainContent .card .cardDesc h4 {
         display: inline;
         color: #1793d4;
