--- a/frontend/src/styles/scss/components/_mainContent.scss
+++ b/frontend/src/styles/scss/components/_mainContent.scss
@@ -1,8 +1,8 @@
 .mainContent {
 	display: flex;
 	flex-wrap: wrap;
-	height: 100vh;
-	flex-direction: column;
+	min-height: 100vh;
+	flex-direction: row;
 	background: $light-blue;
 	justify-content: space-around;
 	align-items: center;
@@ -11,19 +11,17 @@
 		position: relative;
 		display: flex;
 		width: 80%;
-		height: auto;
 		padding: 1.6rem;
 		margin: 2rem 1rem;
 		background: #fff;
 		flex-direction: column;
 		align-items: center;
 		.cardImage {
-			height: 13rem;
 			overflow: hidden;
 		}
 		.cardDesc {
-			padding: 1.8rem 1.3rem 0.7rem;
-			height: 59%;
+			padding: 1rem 1.3rem 0.7rem;
+			// height: auto;
 			h4 {
 				display: inline;
 				color: $blue;
