--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -44,12 +44,13 @@
 			flex-direction: row;
 			align-items: center;
 			justify-content: space-between;
-			width: 100%;
 			padding: 0 3rem;
-
+			width: 40%;
+			@media screen and (min-width: 768px) {
+				// flex: 1 1;
+			}
 			@media screen and (min-width: 999px) {
-				// width: 25%;
-				flex: 1;
+				// flex: 2 1;
 				padding: 0;
 				.menuIcon {
 					display: none;
@@ -82,12 +83,14 @@
 		.menu {
 			display: flex;
 			flex-direction: column;
-			flex-wrap: wrap;
+			flex-wrap: nowrap;
 			align-items: center;
 			justify-content: flex-end;
 			text-align: center;
 			overflow: hidden;
 			animation: showMenu 300ms forwards;
+			width: 100%;
+			flex: 2 1;
 			@media screen and (min-width: 999px) {
 				flex-direction: row;
 				animation: none 300ms linear;
@@ -95,10 +98,15 @@
 			.menuLinks {
 				display: flex;
 				flex-direction: column;
-				margin: 1.6rem;
+				margin: 1.6rem 0;
+				width: 96%;
+				justify-content: flex-end;
 				a {
+					width: 100%;
 					text-transform: uppercase;
 					text-decoration: none;
+					border-bottom: 1px solid transparent;
+					@include linkHover();
 				}
 				@media screen and (min-width: 999px) {
 					flex-direction: row;
@@ -112,16 +120,15 @@
 				flex-direction: column;
 				justify-content: center;
 				align-items: center;
+
 				button {
 					@include buttons($width: 9.9, $height: 2.5, $background: $white, $color: $blue);
 					&:hover {
 						@include hover($blue, $white);
 					}
 				}
-				@media screen and (min-width: 768px) {
-					padding-left: 2rem;
-				}
 				@media screen and (min-width: 999px) {
+					padding-left: 2rem;
 					flex-direction: row;
 				}
 				.search {
@@ -163,7 +170,6 @@
 				text-transform: uppercase;
 				font-size: 3vmax;
 				line-height: 4.4rem;
-
 				&:last-child {
 					font-weight: 700;
 				}
@@ -185,6 +191,7 @@
 			}
 			a {
 				padding: 0;
+				@include linkHover($text-decoration: none);
 			}
 			button {
 				@include buttons(13.7, 3.7, $white, $blue);
@@ -238,6 +245,7 @@
 			a {
 				padding: 0.1;
 				font-size: 0.9rem;
+				@include linkHover($text-decoration: none);
 			}
 			@media (min-width: 768px) {
 				flex-direction: row;
