--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -23,40 +23,38 @@
 		position: fixed;
 		flex-direction: column;
 		align-items: center;
-		background: $grayish-blue;
+		background: $menu-blue;
 		width: 100%;
 		transition: padding 200ms linear;
 		z-index: 999;
+
 		@media screen and (min-width: 999px) {
 			width: 92%;
 			position: absolute;
 			background: transparent;
 			flex-direction: row;
 			padding: 2.7rem 0rem 1.1rem;
-			// margin: 0 6rem;
 			margin: auto;
 			animation: none;
 			border-bottom: 1px solid $white;
-			// width: stretch;
 		}
+
 		.logoMenuIcon {
 			display: flex;
 			flex-direction: row;
 			align-items: center;
 			justify-content: space-between;
 			padding: 0 3rem;
-			width: 40%;
+			width: 100%;
 			@media screen and (min-width: 768px) {
-				// flex: 1 1;
 			}
 			@media screen and (min-width: 999px) {
-				// flex: 2 1;
+				width: 40%;
 				padding: 0;
 				.menuIcon {
 					display: none;
 				}
 			}
-
 			.logoContainer {
 				text-decoration: none;
 				padding: 0;
@@ -90,11 +88,12 @@
 			overflow: hidden;
 			animation: showMenu 300ms forwards;
 			width: 100%;
-			flex: 2 1;
 			@media screen and (min-width: 999px) {
 				flex-direction: row;
 				animation: none 300ms linear;
+				text-align: right;
 			}
+
 			.menuLinks {
 				display: flex;
 				flex-direction: column;
@@ -102,15 +101,17 @@
 				width: 96%;
 				justify-content: flex-end;
 				a {
-					width: 100%;
+					padding: 1rem;
 					text-transform: uppercase;
 					text-decoration: none;
 					border-bottom: 1px solid transparent;
-					@include linkHover();
+					@include linkHover($font-weight: 300);
 				}
 				@media screen and (min-width: 999px) {
+					justify-content: space-evenly;
+					width: 60%;
 					flex-direction: row;
-					li {
+					a {
 						padding: 1rem;
 					}
 				}
@@ -155,7 +156,7 @@
 		line-height: 4.4rem;
 		font-weight: 300;
 		letter-spacing: 0.2rem;
-
+		padding: 0 2rem;
 		@media screen and (min-width: 999px) {
 			height: 95%;
 			text-align: left;
@@ -163,13 +164,14 @@
 			justify-content: center;
 			padding: 10% 10rem 0;
 		}
+
 		.ctaMessage {
 			padding: 1rem 0;
 			margin-top: -6rem;
 			h1 {
 				text-transform: uppercase;
-				font-size: 3vmax;
-				line-height: 4.4rem;
+				font-size: 5vmin;
+				line-height: 3.4rem;
 				&:last-child {
 					font-weight: 700;
 				}
@@ -177,6 +179,10 @@
 
 			@media screen and (min-width: 768px) {
 				margin-top: -22px;
+				font-size: 2vmax;
+				h1 {
+					line-height: 5.4rem;
+				}
 			}
 		}
 		.ctaLinks {
