--- a/frontend/src/styles/scss/modules/_animations.scss
+++ b/frontend/src/styles/scss/modules/_animations.scss
@@ -3,8 +3,8 @@
 		height: 0px;
 	}
 	100% {
-		// height: 25rem;
-		height: 100%;
+		height: 25rem;
+		// height: 100%;
 	}
 }
 @keyframes hideMenu {
