--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -172,7 +172,7 @@
 				text-transform: uppercase;
 				font-size: 5vmin;
 				line-height: 3.4rem;
-				&:last-child {
+				span {
 					font-weight: 700;
 				}
 			}
@@ -228,8 +228,6 @@
 			height: 74px;
 			flex-direction: row;
 			justify-content: flex-start;
-		}
-		@media (min-width: 999px) {
 			padding-left: 9.55%;
 		}
 		.subMenuPrompt {
@@ -246,10 +244,14 @@
 		}
 		.subMenuLinks {
 			display: flex;
-			text-align: center;
 			padding: 0 1rem;
+			text-align: center;
+			flex-direction: column;
+			.subMenuIcon {
+				display: none;
+			}
 			a {
-				padding: 0.1;
+				padding: 0.7rem;
 				font-size: 0.9rem;
 				@include linkHover($text-decoration: none);
 			}
