--- a/frontend/src/styles/scss/components/_footer.scss
+++ b/frontend/src/styles/scss/components/_footer.scss
@@ -5,9 +5,15 @@ footer {
 		display: flex;
 		flex-direction: column;
 		background: $yellow;
-
 		> div {
-			padding: 3.6rem 2rem;
+			padding: 1.4rem;
+		}
+		@media screen and (min-width: 999px) {
+			position: relative;
+			flex-direction: row;
+			> div {
+				padding: 3.6rem 2rem;
+			}
 		}
 		.phoneEmail {
 			background: $blue;
@@ -19,27 +25,75 @@ footer {
 				color: $white;
 				@include linkHover($text-decoration: none, $letter-spacing: 0);
 			}
+			@media screen and (min-width: 999px) {
+				position: absolute;
+				height: 110%;
+				bottom: 0;
+				left: 7.2rem;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+			}
 		}
 		.addressSocial {
 			display: flex;
-			flex-direction: row;
+			flex-direction: column;
 			justify-content: center;
 			line-height: 1.9rem;
-			padding-right: 0;
+			margin-left: 1rem;
 			a {
 				color: $black;
 				@include linkHover($text-decoration: none, $letter-spacing: 0);
 			}
 			address {
-				margin-right: 1rem;
+				color: $gray;
+				margin: 1.3rem;
+				h4 {
+					font-weight: 700;
+				}
 				div {
 					display: flex;
 					flex-direction: column;
 				}
 			}
+			@media screen and (min-width: 768px) {
+				align-items: center;
+				line-height: 2.5rem;
+				flex-direction: column;
+				width: 100%;
+
+				address {
+					margin: 0;
+					div {
+						display: flex;
+						flex-direction: column;
+					}
+					h4 {
+						font-size: 2vw;
+					}
+				}
+			}
+			@media screen and (min-width: 1300px) {
+				flex-direction: row;
+				address {
+					margin-right: 3rem;
+					div {
+						display: flex;
+						flex-direction: row;
+					}
+					h4 {
+						font-size: 1.5rem;
+					}
+				}
+			}
 		}
 		.spacer {
 			display: none;
+			@media screen and (min-width: 999px) {
+				display: block;
+				width: 40%;
+				min-width: 31rem;
+			}
 		}
 		.socialMedia {
 			img {
@@ -56,67 +110,27 @@ footer {
 		font-size: 0.7rem;
 		padding: 1.9rem;
 		line-height: 1.3rem;
+		width: 100%;
+		justify-content: center;
+		text-align: center;
 		a {
 			color: $white;
 			@include linkHover($text-decoration: none, $letter-spacing: 0.043);
 		}
-	}
-	@media screen and (min-width: 799px) {
-		.contact {
-			position: relative;
-			flex-direction: row;
-			.phoneEmail {
-				position: absolute;
-				height: 110%;
-				bottom: 0;
-				left: 7.2rem;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-			}
-			.addressSocial {
-				align-items: center;
-				line-height: 2.5rem;
-				flex-direction: column;
-				width: 100%;
-				address {
-					div {
-						display: flex;
-						flex-direction: column;
-					}
-					h4 {
-						font-size: 2vw;
-					}
-				}
-			}
-			.spacer {
-				display: block;
-				width: 40%;
-				min-width: 31rem;
-			}
-		}
-		.copyright {
-			width: 100%;
-			flex-direction: column;
-			justify-content: center;
-			text-align: center;
-			p {
-				font-size: 0.7rem;
-				font-weight: 300;
-				letter-spacing: 0.045rem;
-				&:not(:last-child) {
+		p {
+			font-size: 0.7rem;
+			font-weight: 300;
+			letter-spacing: 0.045rem;
+			&:not(:last-child) {
+				content: '';
+				&::after {
 					content: '';
-					&::after {
-						content: '';
-						display: inline;
-						padding: 0 0.7rem;
-					}
+					display: inline;
+					padding: 0 0.7rem;
 				}
 			}
 		}
-	}
-	@media screen and (min-width: 999px) {
-		.copyright {
+		@media screen and (min-width: 999px) {
 			flex-direction: row;
 			p {
 				&:not(:last-child) {
@@ -125,22 +139,6 @@ footer {
 						content: '|';
 						display: inline;
 						padding: 0 0.7rem;
-					}
-				}
-			}
-		}
-	}
-	@media screen and (min-width: 1199px) {
-		.contact {
-			.addressSocial {
-				flex-direction: row;
-				address {
-					div {
-						display: flex;
-						flex-direction: row;
-					}
-					h4 {
-						font-size: 1.5rem;
 					}
 				}
 			}
