--- a/frontend/src/styles/scss/base/_colors.scss
+++ b/frontend/src/styles/scss/base/_colors.scss
@@ -1,6 +1,7 @@
 $grayish-blue: rgba(21, 44, 68, 0.78);
 $menu-blue: rgba(21, 44, 68, 0.9);
 $grayish-dark-blue: rgba(18, 37, 52, 0.16);
+$gray: #707071;
 $light-blue: #ddecff;
 $white: #fff;
 $blue: #1793d4;
