Wrap header elements in <span> tags instead of splitting them into three <h1>

--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -172,7 +172,7 @@
 				text-transform: uppercase;
 				font-size: 5vmin;
 				line-height: 3.4rem;
-				span {
+				span:last-of-type {
 					font-weight: 700;
 				}
 			}
