--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -336,7 +336,7 @@ img {
         text-transform: uppercase;
         font-size: 5vmin;
         line-height: 3.4rem; }
-        .header .cta .ctaMessage h1 span {
+        .header .cta .ctaMessage h1 span:last-of-type {
           font-weight: 700; }
       @media screen and (min-width: 768px) {
         .header .cta .ctaMessage {
