Link in the footer's address-social component is gray

--- a/frontend/src/styles/scss/components/_footer.scss
+++ b/frontend/src/styles/scss/components/_footer.scss
@@ -42,7 +42,7 @@ footer {
 			line-height: 1.9rem;
 			margin-left: 1rem;
 			a {
-				color: $black;
+				color: $gray;
 				@include linkHover($text-decoration: none, $letter-spacing: 0);
 			}
 			address {
