--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -196,7 +196,8 @@ img {
     align-items: center;
     background: rgba(21, 44, 68, 0.9);
     width: 100%;
-    transition: padding 200ms linear; }
+    transition: padding 200ms linear;
+    z-index: 999; }
     @media screen and (min-width: 999px) {
       .header .nav {
         width: 92%;
@@ -263,13 +264,14 @@ img {
         display: flex;
         flex-direction: column;
         margin: 1.6rem 0;
+        padding: 1rem;
         width: 96%;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        align-items: center; }
         .header .nav .menu .menuLinks a {
-          padding: 1rem;
           text-transform: uppercase;
           text-decoration: none;
-          border-bottom: 1px solid transparent; }
+          width: max-content; }
           .header .nav .menu .menuLinks a:hover {
             text-decoration: underline;
             letter-spacing: 0.062rem;
@@ -280,11 +282,11 @@ img {
         @media screen and (min-width: 999px) {
           .header .nav .menu .menuLinks {
             justify-content: space-evenly;
-            width: 90%;
+            max-width: 70rem;
             flex-direction: row;
             margin: 0.2rem 0; }
             .header .nav .menu .menuLinks a {
-              padding: 1rem; } }
+              padding: 1rem 0; } }
       .header .nav .menu .menuActions {
         display: flex;
         flex-direction: column;
@@ -309,7 +311,7 @@ img {
             color: #fff; }
         @media screen and (min-width: 999px) {
           .header .nav .menu .menuActions {
-            padding-left: 2rem;
+            padding-left: 1.3rem;
             flex-direction: row; } }
         .header .nav .menu .menuActions .search {
           margin: 1.3rem; }
@@ -466,11 +468,11 @@ img {
     .mainContent .card .cardDesc {
       padding: 1rem 1.3rem 0.7rem; }
       .mainContent .card .cardDesc h4 {
-        display: inline;
         color: #1793d4;
         text-transform: uppercase;
-        font-weight: 300; }
-        .mainContent .card .cardDesc h4:last-of-type {
+        font-weight: 300;
+        width: max-content; }
+        .mainContent .card .cardDesc h4 span:last-of-type {
           font-weight: 700; }
       .mainContent .card .cardDesc p {
         font-size: 0.9rem;
