--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -140,6 +140,56 @@
 				}
 				.search {
 					margin: 1.3rem;
+					position: relative;
+					svg {
+						z-index: 999;
+						margin-left: -2.1rem;
+						margin-top: 0.8rem;
+						// margin-right: 1rem;
+					}
+
+					.toggleSearch {
+						display: flex;
+						input[type="text"] {
+							width: 3rem;
+							height: 3rem;
+							background: transparent;
+							border: 2px solid $white;
+							border-radius: 50px;
+							position: relative;
+							right: 0;
+							letter-spacing: 0.1rem;
+							color: transparent;
+							transition: width 200ms linear;
+							border: 2px solid $white;
+							margin-left: -0.5rem;
+							&::placeholder {
+								color: transparent;
+							}
+
+							&.openSearch {
+								padding: 1rem 4rem;
+								background: $search-blue;
+								width: 50rem;
+								color: $white;
+								z-index: 990;
+								border: none;
+								right: -0.8rem;
+								transition: width 200ms linear;
+								&::placeholder {
+									color: rgba(255, 255, 255, 0.432);
+									font-style: italic;
+								}
+								@media screen and (min-width: 769px) {
+									right: 0;
+									border: 2px solid $white;
+								}
+							}
+							&:focus {
+								outline: none;
+							}
+						}
+					}
 				}
 			}
 
